--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         />
     <EditText
         android:id="@+id/et_password"
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/et_user_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:inputType="text"
+        android:inputType="textPassword"
         />
 
     <Button
